@@ -4,3 +4,4 @@
  - Added support for multiple search terms (space separated, ex. "fi cpp" will find "SomeFile.cpp" but not "SomeFile.h")
  - Don't show duplicate files (files that exist in multiple projects)
  - Start searching after the second character
+ - Added checkboxes to allow opening multiple files (space to check, if nothing checked, it opens the selected one)
